apps/eaex/overlays/aws-us-west-2-cc-smarsh-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eaex
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: eaex
      app.kubernetes.io/instance: eaex
  template:
    spec:
      containers:
      - name: eaex
        resources:
          limits:
            cpu: 2000m
            memory: 3G
            ephemeral-storage: 2G
          requests:
            cpu: 100m
            memory: 2G
            ephemeral-storage: 1G
